fix more dark mode

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2,7 +2,7 @@ $color-primary: hsl(0, 0%, 100%);
 $color-text: rgb(224, 220, 209);
 $color-subtext: hsl(0, 0%, 63%);
 $color-border: hsl(0, 0%, 0%);
-$color-box-background: mix($color-primary, white, 4%);
+$color-box-background: mix($color-primary, black, 4%);
 $border-radius: 4px;
 $font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
   sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
